--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "json-server server.json -w -d 500",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -20,6 +21,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "json-server": "^0.17.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
