feat: add eslint

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "dev:server": "json-server server.json -w -d 500",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src --ext .tsx,.ts",
+    "lint:fix":  "eslint src --ext .tsx,.ts --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.8",
@@ -22,9 +24,11 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "eslint": "^8.24.0",
     "json-server": "^0.17.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
