--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext .tsx,.ts",
-    "lint:fix":  "eslint src --ext .tsx,.ts --fix"
+    "lint:fix": "eslint src --ext .tsx,.ts --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.8",
@@ -21,6 +21,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
     "react-router-dom": "^6.4.0",
+    "scheduler": "^0.23.0",
+    "use-context-selector": "^1.4.1",
     "zod": "^3.19.1"
   },
   "devDependencies": {
